<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_regular"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:text="@string/watch_ads_to_get_rewards"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_set_default_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_default_provider"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_default_providers"
        android:layout_width="160dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_set_default_provider"
        app:layout_constraintLeft_toLeftOf="@id/tv_set_default_provider"
        app:layout_constraintBottom_toTopOf="@id/rg_ad_providers"/>

    <LinearLayout
        android:id="@+id/ad_provider_status_container"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/spinner_default_providers"
        app:layout_constraintLeft_toLeftOf="@id/tv_set_default_provider">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_adcolony_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_cross_red_24dp"
            />
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_admob_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_cross_red_24dp"
            />
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_vungle_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_cross_red_24dp"
            />
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_chartboost_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_cross_red_24dp"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_ad_providers"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ad_provider_status_container"
        app:layout_constraintLeft_toRightOf="@id/ad_provider_status_container">
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_adcolony"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/adcolony" />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_admob"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/admob" />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_vungle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/vungle"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_chartboost"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/chartboost"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_ad_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/rg_ad_providers"
        app:layout_constraintLeft_toLeftOf="@id/tv_set_default_provider"
        tools:text="Adcolony"
        />

    <TextView
        android:id="@+id/place_holder"
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:layout_marginTop="@dimen/margin_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:text="@string/placeholder_text"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/btn_show_ad"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginBottom="@dimen/margin_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onWatchAdClick"
        android:text="@string/watch"/>
</android.support.constraint.ConstraintLayout>